Added style to scale images in quotes

--- a/forum/Themes/Redsy/css/index.css
+++ b/forum/Themes/Redsy/css/index.css
@@ -297,6 +297,12 @@ blockquote.bbc_standard_quote, blockquote.bbc_alternate_quote
 	overflow: auto;
 }
 
+/* Images in quotes */
+blockquote img {
+	max-height: 100px;
+	max-width: 200px;
+}
+
 /* Alterate blockquote stylings */
 blockquote.bbc_standard_quote
 {
