Tweaked pagination for mobile support

--- a/forum/Themes/Redsy/css/index.css
+++ b/forum/Themes/Redsy/css/index.css
@@ -460,22 +460,89 @@ tr.catbg th a:link, tr.catbg th a:visited, tr.catbg2 td a:link, tr.catbg2 td a:v
 	color: #000;
 	background-color: #fff;
 }
+
 /* the page navigation area */
 .pagesection
 {
 	font-size: 0.9em;
 	padding: 0.2em;
 	overflow: hidden;
-	margin-bottom: 1px;
-}
-div.pagesection div.floatright input
-{
-	margin-top: 3px;
+	margin-top: 0.3em;
+	margin-bottom: 0.3em;
 }
 
-.pagelinks
+/* Main pagination links */
+.pagesection .pagelinks
 {
-	padding: 0.6em 0 0.4em 0;
+	font-size: 1.1em;
+}
+
+.pagesection .pagelinks > *
+{
+	background-color: #ffffff;
+	position: relative;
+	float: left;
+	border-style: solid;
+	border-width: 1px;
+	padding: 0.6em 0.8em;
+	margin-left: -1px;
+}
+
+.pagesection .pagelinks a.navPages
+{
+	background-color: #ffffff;
+	border-color: #dddddd;
+	cursor: pointer;
+	color: #337ab6;
+}
+
+.pagesection .pagelinks a.navPages:hover
+{
+	background-color: #eeeeee;
+	text-decoration: none;
+}
+
+/* ... Pagination expander */
+.pagesection .pagelinks > span
+{
+	background-color: #ffffff;
+	border-color: #dddddd;
+	cursor: none;
+	color: #337ab6;
+}
+
+.pagesection .pagelinks > span:hover
+{
+	background-color: #eeeeee;
+}
+
+.pagesection .pagelinks > span > a.navPages
+{
+	background-color: inherit;
+	padding: 0;
+	border-style:none;
+}
+
+/* Current page */
+.pagesection .pagelinks > strong
+{
+	color: white;
+	background-color: #337ab6;
+	border-color: #337ab6;
+	cursor: default;
+	text-shadow: 1px 1px black;
+}
+
+.pagesection .pagelinks a.navPages:last-child, .pagesection .pagelinks strong:last-child
+{
+	border-bottom-right-radius: 4px;
+	border-top-right-radius: 4px;
+}
+
+.pagesection .pagelinks a.navPages:first-child, .pagesection .pagelinks strong:first-child
+{
+	border-bottom-left-radius: 4px;
+	border-top-left-radius: 4px;
 }
 
 /* Colors for background of posts requiring approval */
@@ -1324,6 +1391,18 @@ ul#navigation li
 {
 	width: 100%;
 	min-height: 200px;
+}
+/* Individual thread index */
+@media (max-width: 768px) {
+	#main_content_section small
+	{
+		font-size: 100%;
+	}
+	
+	#main_content_section small > a.navPages
+	{
+		padding: 0.3em;
+	}
 }
 
 /* the main title, always stay at 45 pixels in height! */
@@ -2741,6 +2820,7 @@ tr.windowbg td, tr.windowbg2 td, tr.approvebg td, tr.highlight2 td
 .topic_table table
 {
 	width: 100%;
+	margin-bottom: 0px;
 }
 .topic_table .icon1, .topic_table .icon2, .topic_table .stats
 {
