--- a/forum/Themes/Redsy/css/index.css
+++ b/forum/Themes/Redsy/css/index.css
@@ -464,30 +464,32 @@ tr.catbg th a:link, tr.catbg th a:visited, tr.catbg2 td a:link, tr.catbg2 td a:v
 /* the page navigation area */
 .pagesection
 {
-	padding: 0.2em;
-	overflow: hidden;
-	margin-top: 0.3em;
 	margin-bottom: 0.3em;
+	margin-top: 0.3em;
+	overflow: hidden;
+	padding: 0.2em;
 }
 
 /* Main pagination links */
-.pagesection .pagelinks > a.navPages, .pagesection .pagelinks > span > a, .pagesection .pagelinks > strong
+.pagesection .pagelinks > a.navPages,
+.pagesection .pagelinks > span > a,
+.pagesection .pagelinks > strong
 {
 	background-color: #ffffff;
-	position: relative;
-	float: left;
 	border-style: solid;
 	border-width: 1px;
-	padding: 0.6em 0.8em;
+	float: left;
 	margin-left: -1px;
+	padding: 0.6em 0.8em;
+	position: relative;
 }
 
 .pagesection .pagelinks a.navPages
 {
 	background-color: #ffffff;
 	border-color: #dddddd;
-	cursor: pointer;
 	color: #337ab6;
+	cursor: pointer;
 }
 
 .pagesection .pagelinks a.navPages:hover
@@ -513,20 +515,22 @@ tr.catbg th a:link, tr.catbg th a:visited, tr.catbg2 td a:link, tr.catbg2 td a:v
 /* Current page */
 .pagesection .pagelinks > strong
 {
-	color: white;
 	background-color: #337ab6;
 	border-color: #337ab6;
+	color: white;
 	cursor: default;
 	text-shadow: 1px 1px black;
 }
 
-.pagesection .pagelinks > a.navPages:last-child, .pagesection .pagelinks strong:last-child
+.pagesection .pagelinks > a.navPages:last-child,
+.pagesection .pagelinks strong:last-child
 {
 	border-bottom-right-radius: 4px;
 	border-top-right-radius: 4px;
 }
 
-.pagesection .pagelinks > a.navPages:first-child, .pagesection .pagelinks strong:first-child
+.pagesection .pagelinks > a.navPages:first-child,
+.pagesection .pagelinks strong:first-child
 {
 	border-bottom-left-radius: 4px;
 	border-top-left-radius: 4px;
