--- a/forum/Themes/Redsy/css/index.css
+++ b/forum/Themes/Redsy/css/index.css
@@ -2185,6 +2185,20 @@ ul.quickbuttons li.inline_mod_check
 	color: red;
 	font-weight: bold;
 }
+.post-ban-refer a, .post-ban-refer a:visited, .post-ban-refer a:hover
+{
+	height: 1.5em;
+	width: 1.5em;
+	color: red;
+	font-size: 1em;
+	font-weight: bolder;
+	text-align: center;
+	text-decoration: none;
+	line-height: 1.1em;
+	border: 2px solid red;
+	border-radius: 100%;
+	display: block;
+}
 .post-tip-notice
 {
 	color: green;
